--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -713,7 +713,7 @@
    "source": [
     "total = 1;\n",
     "for i in range(1,6):\n",
-    "  total = total*i\n",
+    "    total = total*i\n",
     "print(total)"
    ]
   },
@@ -843,6 +843,21 @@
     "    print(number, \"is negative\")\n",
     "else:\n",
     "    print(number, \"is zero!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "General Structure of `if statement`:  \n",
+    "\n",
+    "    if Boolean Expression:\n",
+    "        statements\n",
+    "    elif Boolean Expression:\n",
+    "        statements\n",
+    "    elif ... (You can have indefinite number of elif statements\n",
+    "    else:\n",
+    "        statemetns"
    ]
   },
   {
@@ -1485,7 +1500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
