Update instructor info

--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -38,14 +38,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Yash Wagh\n",
-    "![Yash](https://data.berkeley.edu/sites/default/files/styles/width_400/public/dsep_pic_-_yash_wagh-min.jpg?itok=EoSYO021&timestamp=1599269234)\n",
+    "# Spencer Le\n",
+    "![Spencer](https://github.com/ds-peer-consulting/fa21-intro-to-python-workshop/blob/a874683136c7c00b6e05c7e14d2378b0dff4a5cb/images/spencer.jpg)\n",
     "\n",
     "\n",
     "Quick Facts:\n",
     "\n",
-    "    🐻 3rd year\n",
-    "    🎒 Studying Computer Science\n",
+    "    🐻 Senior \n",
+    "    🎒 Studying Computer Science and Data Science\n",
     "    📊 Joined the Data Peer Consulting team in Spring 2020"
    ]
   },
@@ -53,13 +53,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Adrian Zhang\n",
-    "![Adrian](https://data.berkeley.edu/sites/default/files/styles/width_400/public/img_1409_3_-_yuchen_zhang_0.jpg?itok=sIuOL_xh&timestamp=1599265063)\n",
+    "# Mein Lee\n",
+    "![Mein](https://github.com/ds-peer-consulting/fa21-intro-to-python-workshop/blob/a874683136c7c00b6e05c7e14d2378b0dff4a5cb/images/mein.jpeg)\n",
     "Quick Facts About Me:\n",
     "\n",
     "    🐻 Senior at Cal\n",
-    "    🎒 Studying Computer Science and Data Science\n",
-    "    📊 Joined the Data Peer Consulting team in Spring 2019"
+    "    🎒 Studying Data Science\n",
+    "    📊 Joined the Data Peer Consulting team in Spring 2021"
    ]
   },
   {
