Update image links

--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "# Spencer Le\n",
-    "![Spencer](https://github.com/ds-peer-consulting/fa21-intro-to-python-workshop/blob/a874683136c7c00b6e05c7e14d2378b0dff4a5cb/images/spencer.jpg)\n",
+    "![Spencer](images/spencer.jpg)\n",
     "\n",
     "\n",
     "Quick Facts:\n",
@@ -54,7 +54,7 @@
    "metadata": {},
    "source": [
     "# Mein Lee\n",
-    "![Mein](https://github.com/ds-peer-consulting/fa21-intro-to-python-workshop/blob/a874683136c7c00b6e05c7e14d2378b0dff4a5cb/images/mein.jpeg)\n",
+    "![Mein](images/mein.jpeg)\n",
     "Quick Facts About Me:\n",
     "\n",
     "    🐻 Senior at Cal\n",
