include helpers' information, edit breakout room sections

--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "    🐻 Senior \n",
     "    🎒 Studying Computer Science and Data Science\n",
-    "    📊 Joined the Data Peer Consulting team in Spring 2020"
+    "    📊 Joined the Data Peer Consulting team in Summer 2020"
    ]
   },
   {
@@ -60,6 +60,36 @@
     "    🐻 Senior at Cal\n",
     "    🎒 Studying Data Science\n",
     "    📊 Joined the Data Peer Consulting team in Spring 2021"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jun Park\n",
+    "![Jun](images/jun.png)\n",
+    "\n",
+    "\n",
+    "Quick Facts:\n",
+    "\n",
+    "    🐻 Sophomore \n",
+    "    🎒 Studying Data Science and Statistics\n",
+    "    📊 Joined the Data Peer Consulting team in Spring 2021"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Richa Bhattacharya\n",
+    "![Richa](images/richa.jpg)\n",
+    "\n",
+    "\n",
+    "Quick Facts:\n",
+    "\n",
+    "    🐻 Junior \n",
+    "    🎒 Studying Computer Science and Data Science\n",
+    "    📊 Joined the Data Peer Consulting team in Summer 2020"
    ]
   },
   {
@@ -334,18 +364,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 Yash\n"
+      "20 Spencer\n"
      ]
     }
    ],
    "source": [
     "#In Java:\n",
-    "#   int age = 20;\n",
-    "#   String name = \"Yash\";\n",
+    "#   int age = 21;\n",
+    "#   String name = \"Spencer\";\n",
     "\n",
     "#In Python:\n",
     "age = 20\n",
-    "name = \"Yash\"\n",
+    "name = \"Spencer\"\n",
     "print(age, name)"
    ]
   },
@@ -736,6 +766,13 @@
     "colab_type": "text",
     "id": "YtJ50hBDcVZ1"
    },
+   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ¡Breakout Rooms -- Q&A!"
+   ]
+  },
    "source": [
     "# Making Choices with Conditionals\n",
     "https://swcarpentry.github.io/python-novice-inflammation/07-cond/index.html"
