--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -55,7 +55,9 @@
    "source": [
     "# Mein Lee\n",
     "![Mein](images/mein.jpeg)\n",
-    "Quick Facts About Me:\n",
+    "\n",
+    "\n",
+    "Quick Facts:\n",
     "\n",
     "    🐻 Senior at Cal\n",
     "    🎒 Studying Data Science\n",
@@ -773,6 +775,7 @@
     "# ¡Breakout Rooms -- Q&A!"
    ]
   },
+  {
    "source": [
     "# Making Choices with Conditionals\n",
     "https://swcarpentry.github.io/python-novice-inflammation/07-cond/index.html"
