--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "    🐻 Senior \n",
     "    🎒 Studying Computer Science and Data Science\n",
-    "    📊 Joined the Data Peer Consulting team in Summer 2020"
+    "    📊 Joined the Data Peer Consulting team in Spring 2020"
    ]
   },
   {
@@ -55,43 +55,11 @@
    "source": [
     "# Mein Lee\n",
     "![Mein](images/mein.jpeg)\n",
-    "\n",
-    "\n",
-    "Quick Facts:\n",
+    "Quick Facts About Me:\n",
     "\n",
     "    🐻 Senior at Cal\n",
     "    🎒 Studying Data Science\n",
     "    📊 Joined the Data Peer Consulting team in Spring 2021"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Jun Park\n",
-    "![Jun](images/jun.png)\n",
-    "\n",
-    "\n",
-    "Quick Facts:\n",
-    "\n",
-    "    🐻 Sophomore \n",
-    "    🎒 Studying Data Science and Statistics\n",
-    "    📊 Joined the Data Peer Consulting team in Spring 2021"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Richa Bhattacharya\n",
-    "![Richa](images/richa.jpg)\n",
-    "\n",
-    "\n",
-    "Quick Facts:\n",
-    "\n",
-    "    🐻 Junior \n",
-    "    🎒 Studying Computer Science and Data Science\n",
-    "    📊 Joined the Data Peer Consulting team in Summer 2020"
    ]
   },
   {
@@ -366,18 +334,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 Spencer\n"
+      "20 Yash\n"
      ]
     }
    ],
    "source": [
     "#In Java:\n",
-    "#   int age = 21;\n",
-    "#   String name = \"Spencer\";\n",
+    "#   int age = 20;\n",
+    "#   String name = \"Yash\";\n",
     "\n",
     "#In Python:\n",
     "age = 20\n",
-    "name = \"Spencer\"\n",
+    "name = \"Yash\"\n",
     "print(age, name)"
    ]
   },
@@ -768,14 +736,6 @@
     "colab_type": "text",
     "id": "YtJ50hBDcVZ1"
    },
-   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ¡Breakout Rooms -- Q&A!"
-   ]
-  },
-  {
    "source": [
     "# Making Choices with Conditionals\n",
     "https://swcarpentry.github.io/python-novice-inflammation/07-cond/index.html"
