--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -55,10 +55,25 @@
    "source": [
     "# Mein Lee\n",
     "![Mein](images/mein.jpeg)\n",
-    "Quick Facts About Me:\n",
+    "Quick Facts:\n",
     "\n",
     "    🐻 Senior at Cal\n",
     "    🎒 Studying Data Science\n",
+    "    📊 Joined the Data Peer Consulting team in Spring 2021"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spencer Le\n",
+    "![Jun](images/jun.png)\n",
+    "\n",
+    "\n",
+    "Quick Facts:\n",
+    "\n",
+    "    🐻 Senior \n",
+    "    🎒 Studying Data Science and Statistics\n",
     "    📊 Joined the Data Peer Consulting team in Spring 2021"
    ]
   },
