--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spencer Le\n",
+    "# Spencer\n",
     "![Spencer](images/spencer.jpg)\n",
     "\n",
     "\n",
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mein Lee\n",
+    "# Mein\n",
     "![Mein](images/mein.jpeg)\n",
     "Quick Facts:\n",
     "\n",
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spencer Le\n",
+    "# Jun\n",
     "![Jun](images/jun.png)\n",
     "\n",
     "\n",
@@ -75,6 +75,21 @@
     "    🐻 Senior \n",
     "    🎒 Studying Data Science and Statistics\n",
     "    📊 Joined the Data Peer Consulting team in Spring 2021"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Richa\n",
+    "![Richa](images/richa.jpg)\n",
+    "\n",
+    "\n",
+    "Quick Facts:\n",
+    "\n",
+    "    🐻 Senior \n",
+    "    🎒 Studying Computer Science and Data Science\n",
+    "    📊 Joined the Data Peer Consulting team in Fall 2020"
    ]
   },
   {
