--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "    🐻 Senior \n",
     "    🎒 Studying Computer Science and Data Science\n",
-    "    📊 Joined the Data Peer Consulting team in Spring 2020"
+    "    📊 Joined the Data Peer Consulting team in Summer 2020"
    ]
   },
   {
@@ -364,18 +364,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 Yash\n"
+      "21 Spencer\n"
      ]
     }
    ],
    "source": [
     "#In Java:\n",
     "#   int age = 20;\n",
-    "#   String name = \"Yash\";\n",
+    "#   String name = \"Spencer\";\n",
     "\n",
     "#In Python:\n",
-    "age = 20\n",
-    "name = \"Yash\"\n",
+    "age = 21\n",
+    "name = \"Spencer\"\n",
     "print(age, name)"
    ]
   },
