edit breakout room sections

--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -370,7 +370,7 @@
    ],
    "source": [
     "#In Java:\n",
-    "#   int age = 20;\n",
+    "#   int age = 21;\n",
     "#   String name = \"Spencer\";\n",
     "\n",
     "#In Python:\n",
@@ -766,6 +766,13 @@
     "colab_type": "text",
     "id": "YtJ50hBDcVZ1"
    },
+   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ¡Breakout Rooms -- Q&A!"
+   ]
+  },
    "source": [
     "# Making Choices with Conditionals\n",
     "https://swcarpentry.github.io/python-novice-inflammation/07-cond/index.html"
