--- a/intro-to-python.ipynb
+++ b/intro-to-python.ipynb
@@ -72,7 +72,7 @@
     "\n",
     "Quick Facts:\n",
     "\n",
-    "    🐻 Senior \n",
+    "    🐻 Sophomore \n",
     "    🎒 Studying Data Science and Statistics\n",
     "    📊 Joined the Data Peer Consulting team in Spring 2021"
    ]
@@ -87,9 +87,9 @@
     "\n",
     "Quick Facts:\n",
     "\n",
-    "    🐻 Senior \n",
+    "    🐻 Junior \n",
     "    🎒 Studying Computer Science and Data Science\n",
-    "    📊 Joined the Data Peer Consulting team in Fall 2020"
+    "    📊 Joined the Data Peer Consulting team in Fall 2019"
    ]
   },
   {
